[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Theme/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Actors/Towers/Tower.gd" type="Script" id=2]
[ext_resource path="res://UI/UIUnit/UIUnit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Weapon2D/Weapon2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprite-sheet.svg" type="Texture" id=8]
[ext_resource path="res://Objects/SelectableArea2D/SelectableArea2D.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Tower" type="Node2D"]
script = ExtResource( 2 )

[node name="BaseSprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 192, 64, 73, 64 )

[node name="Weapon2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 32, 36 )

[node name="GlassSprite" type="Sprite" parent="."]
position = Vector2( 31.3318, 38.459 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 272, 89, 26, 27 )

[node name="SelectableArea2D" parent="." instance=ExtResource( 9 )]
position = Vector2( 32, 64 )
z_index = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectableArea2D"]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="Interface" parent="." instance=ExtResource( 3 )]
margin_top = 32.0
margin_bottom = 32.0

[node name="SellButton" type="Button" parent="Interface"]
margin_left = -40.0
margin_top = 48.0
margin_right = 104.0
margin_bottom = 86.0
theme = ExtResource( 1 )
text = "Sell"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="selection_changed" from="SelectableArea2D" to="." method="_on_SelectableArea2D_selection_changed"]
[connection signal="pressed" from="Interface/SellButton" to="." method="_on_SellButton_pressed"]
